fix: Add grid-gap

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -5,6 +5,7 @@
 /* ベース */
 body {
   display: grid;
+  grid-gap: 100px;
   gap: 100px;
   overflow-x: hidden;
   background: $colorBase;
