--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -6,6 +6,7 @@
 .card {
   display: grid;
   grid-template-rows: 1fr auto;
+  grid-gap: 10px;
   gap: 10px;
   transform: translateY(20px);
   opacity: 0;
