--- a/scss/_share.scss
+++ b/scss/_share.scss
@@ -24,6 +24,7 @@
 
   &__links-container {
     display: flex;
+    grid-gap: 30px;
     gap: 30px;
     padding: 15px 40px;
   }
